# dapps-gear-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  crates.js  help.html  index.html  rust-toolchain.toml  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml  ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
gear_lib/: all.html  index.html  sidebar-items.js
gear_lib/fungible_token/: index.html  sidebar-items.js
gear_lib/multitoken/: index.html  sidebar-items.js
gear_lib/non_fungible_token/: index.html  sidebar-items.js
gear_lib_derive/: all.html  derive.FTCore.html  derive.FTMetaState.html  derive.FTStateKeeper.html  derive.MTKCore.html  derive.MTKTokenState.html  derive.NFTCore.html  derive.NFTMetaState.html  derive.NFTStateKeeper.html  derive.StateKeeper.html  index.html  sidebar-items.js
gear_lib_macros/: all.html  index.html  macro.declare_derive_storage_trait!.html  macro.declare_derive_storage_trait.html  macro.declare_impl_trait!.html  macro.declare_impl_trait.html  sidebar-items.js
gear_lib_sr25519/: all.html  enum.Error.html  fn.verify.html  index.html  sidebar-items.js
implementors/scale_info/: trait.TypeInfo.js
lib/: Cargo.toml
lib/src/dynamic_nft/: token.rs
lib/src/fungible_token/: ft_core.rs  state.rs
lib/src/multitoken/: mtk_core.rs  state.rs
lib/src/non_fungible_token/: delegated.rs  io.rs  mod.rs  nft_core.rs  royalties.rs  state.rs  token.rs  user_info.rs
sr25519/: Cargo.toml
src/: lib.rs  tx_manager.rs
src/fungible_token/: ft_core.rs  state.rs
src/gear_lib/: lib.rs.html
(+105 files in other folders)
