[package]
name = "gear-lib"
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "d4552434" }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"] }
sr25519 = { package = "gear-lib-sr25519", path = "../sr25519" }
